# richmol

./: .gitattributes  .gitignore  README.md  build_and_install.sh  pyproject.toml  setup.py
etc/data/benzal_cloride/: benzal_chloride_b3lyp_def2tzvpp_gopt.out  benzal_chloride_b3lyp_def2tzvpp_gopt.xyz  benzal_chloride_b3lyp_def2tzvpp_pol.out  benzal_chloride_rks_def2tzvpp_efg.out
etc/data/s2cl2/: s2cl2_b3lyp_def2tzvpp_pol.inp  s2cl2_mp2_def2tzvpp_gopt.inp  s2cl2_mp2_def2tzvpp_gopt.xyz  s2cl2_rks_def2tzvpp_efg.inp
etc/data/s2cl2/orca/: s2cl2_b3lyp_def2tzvpp_gopt.inp  s2cl2_b3lyp_def2tzvpp_gopt.out  s2cl2_b3lyp_def2tzvpp_gopt.xyz  (+3 more)
examples/: benzal_chloride.ipynb  benzal_chloride.py  benzal_chloride_hyperfine.ipynb  nh3_two_color.ipynb  ocs_impulsive_alignment.ipynb  ocs_thz_orientation.ipynb  ocs_thz_orientation_m.ipynb  s2cl2.py  s2cl2_35_37_pas_coords.xyz  s2cl2_ortho_para_transitions.ipynb  s2cl2_ortho_para_transitions_cl35_37.ipynb  s2cl2_pas_coords.xyz  water_rigrot.ipynb  water_rigrot_stark.ipynb  water_stark_shifts.ipynb
examples/spin_mixing_isotope/: plot_dens.py  s2cl2_35_37_pas_coords.xyz  s2cl2_cc.py  s2cl2_dft.py  s2cl2_ortho_para_transitions.ipynb  s2cl2_ortho_para_transitions_cl35_37.ipynb  s2cl2_pas_coords.xyz
expokit_src/: expokit.f
richmol/: __init__.py  asymtop.py  cartens.py  constants.py  hyperfine.py  nucspin.py  pyexpokit.py  rotsym.py  symmetry.py  symtop.py  tdse.py  units.py  wigner.py
richmol/rot/: _test_water.py  asymtop.py  cartens.py  spin.py  symmetry.py  symtop.py  units.py
richmol/rotor/: asymtop.py  symmetry.py  symtop.py
(+7 files in other folders)
