[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "richmol"
version = "0.1.0"
description = "Molecular rotations and vibrations in fields"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Robochimps", email = "andrey.yachmenev@robochimps.com" }]
dependencies = [
    "jax>=0.5.3",
    "mendeleev>=1.0.0",
    "numpy>=2.2.4",
    "py3nj>=0.2.1",
    "scipy>=1.15.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["richmol*"]

[project.urls]
Homepage = "https://github.com/robochimps/richmol"
